--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>43e268d7-b553-43be-9f94-b0160a22b258</ProjectGuid>
+    <ProjectGuid>{5DA3C280-5EBE-4148-BAB5-C700DA0645C2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Frost</RootNamespace>
@@ -32,16 +32,29 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Color.cs" />
+    <Compile Include="Enumerations.cs" />
+    <Compile Include="Check.cs" />
+    <Compile Include="IDevice2D.cs" />
+    <Compile Include="Matrix3x2.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
+    <Compile Include="Size.cs" />
+    <Compile Include="Thickness.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Atlasing\" />
+    <Folder Include="Buffering\" />
+    <Folder Include="Composition\" />
+    <Folder Include="Diagnostics\" />
+    <Folder Include="Effects\" />
+    <Folder Include="Formatting\" />
+    <Folder Include="Painting\" />
+    <Folder Include="Shaping\" />
+    <Folder Include="Surfacing\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
