--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -105,11 +105,12 @@
     <Compile Include="Color.cs" />
     <Compile Include="Enumerations.cs" />
     <Compile Include="Check.cs" />
+    <Compile Include="HSVColor.cs" />
     <Compile Include="Matrix3x2.cs" />
     <Compile Include="Point.cs" />
-    <Compile Include="Point.test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="RGBColor.cs" />
     <Compile Include="Size.cs" />
     <Compile Include="Thickness.cs" />
   </ItemGroup>
