--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -108,7 +108,7 @@
     <Compile Include="Enumerations.cs" />
     <Compile Include="Check.cs" />
     <Compile Include="HSVColor.cs" />
-    <Compile Include="Matrix3X2.cs" />
+    <Compile Include="Matrix3x2.cs" />
     <Compile Include="Testing.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
