--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -104,11 +104,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Atlasing\Enumerations.cs" />
+    <Compile Include="Buffering\Enumerations.cs" />
     <Compile Include="Color.cs" />
+    <Compile Include="Composition\Enumerations.cs" />
     <Compile Include="Enumerations.cs" />
     <Compile Include="Check.cs" />
+    <Compile Include="Formatting\Enumerations.cs" />
     <Compile Include="HSVColor.cs" />
     <Compile Include="Matrix3x2.cs" />
+    <Compile Include="Painting\Enumerations.cs" />
+    <Compile Include="Shaping\Enumerations.cs" />
+    <Compile Include="Surfacing\Enumerations.cs" />
     <Compile Include="Testing.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -118,15 +125,8 @@
     <Compile Include="Thickness.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Atlasing\" />
-    <Folder Include="Buffering\" />
-    <Folder Include="Composition\" />
     <Folder Include="Diagnostics\" />
     <Folder Include="Effects\" />
-    <Folder Include="Formatting\" />
-    <Folder Include="Painting\" />
-    <Folder Include="Shaping\" />
-    <Folder Include="Surfacing\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
