--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Check.cs" />
     <Compile Include="Formatting\Enumerations.cs" />
     <Compile Include="Formatting\FontFeature.cs" />
+    <Compile Include="Formatting\FontMetrics.cs" />
     <Compile Include="HSVColor.cs" />
     <Compile Include="Matrix3x2.cs" />
     <Compile Include="Painting\Enumerations.cs" />
