--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Formatting\FontFeature.cs" />
     <Compile Include="Formatting\FontMetrics.cs" />
     <Compile Include="Formatting\ITextMetrics.cs" />
+    <Compile Include="Formatting\TextRun.cs" />
     <Compile Include="IndexedRange.cs" />
     <Compile Include="HSVColor.cs" />
     <Compile Include="Matrix3x2.cs" />
