--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -114,12 +114,14 @@
     <Compile Include="Formatting\FontFeature.cs" />
     <Compile Include="Formatting\FontMetrics.cs" />
     <Compile Include="Formatting\ITextMetrics.cs" />
+    <Compile Include="Formatting\Outline.cs" />
     <Compile Include="Formatting\TextRun.cs" />
     <Compile Include="IndexedRange.cs" />
     <Compile Include="HSVColor.cs" />
     <Compile Include="Matrix3x2.cs" />
     <Compile Include="Painting\Enumerations.cs" />
     <Compile Include="Shaping\Enumerations.cs" />
+    <Compile Include="Shaping\Geometry.cs" />
     <Compile Include="Surfacing\Enumerations.cs" />
     <Compile Include="Testing.cs" />
     <Compile Include="Point.cs" />
