--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Formatting\FontMetrics.cs" />
     <Compile Include="Formatting\ITextMetrics.cs" />
     <Compile Include="Formatting\Outline.cs" />
+    <Compile Include="Formatting\Paragraph.cs" />
     <Compile Include="Formatting\TextRun.cs" />
     <Compile Include="IndexedRange.cs" />
     <Compile Include="HSVColor.cs" />
