--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Painting\GradientStop.cs" />
     <Compile Include="Shaping\Enumerations.cs" />
     <Compile Include="Shaping\Geometry.cs" />
+    <Compile Include="Shaping\IGeometrySink.cs" />
     <Compile Include="Surfacing\Enumerations.cs" />
     <Compile Include="Testing.cs" />
     <Compile Include="Point.cs" />
