--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -106,6 +106,7 @@
   <ItemGroup>
     <Compile Include="Atlasing\Enumerations.cs" />
     <Compile Include="Buffering\Enumerations.cs" />
+    <Compile Include="Collections\ImmutableBase.cs" />
     <Compile Include="Color.cs" />
     <Compile Include="Composition\Enumerations.cs" />
     <Compile Include="Device2D.cs" />
@@ -113,6 +114,7 @@
     <Compile Include="Check.cs" />
     <Compile Include="Formatting\Enumerations.cs" />
     <Compile Include="Formatting\FontFeature.cs" />
+    <Compile Include="Formatting\FontFeatureCollection.cs" />
     <Compile Include="Formatting\FontMetrics.cs" />
     <Compile Include="Formatting\ITextMetrics.cs" />
     <Compile Include="Formatting\Outline.cs" />
