--- a/Frost.DirectX.Common/Frost.DirectX.Common.csproj
+++ b/Frost.DirectX.Common/Frost.DirectX.Common.csproj
@@ -82,6 +82,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -89,9 +90,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheDictionary.cs" />
+    <Compile Include="Descriptions.cs" />
     <Compile Include="Diagnostics\IntegerCounter.cs" />
     <Compile Include="Diagnostics\TimeSpanCounter.cs" />
+    <Compile Include="Extensions.cs" />
+    <Compile Include="GeometryBuilder.cs" />
+    <Compile Include="GeometryCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StagingTexture.cs" />
+    <Compile Include="Surface2D.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Frost\Frost.csproj">
