--- a/Frost.DirectX.Composition/Frost.DirectX.Composition.csproj
+++ b/Frost.DirectX.Composition/Frost.DirectX.Composition.csproj
@@ -99,6 +99,7 @@
     <Compile Include="IShaderCompiler.cs" />
     <Compile Include="IShaderEffect.cs" />
     <Compile Include="PredefinedConstants.cs" />
+    <Compile Include="TargetLayerAtlas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
