--- a/Frost.DirectX/Frost.DirectX.csproj
+++ b/Frost.DirectX/Frost.DirectX.csproj
@@ -85,8 +85,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CombinationSink.cs" />
+    <Compile Include="Device2D.cs" />
+    <Compile Include="DynamicAtlas.cs" />
     <Compile Include="GeometrySinkBase.cs" />
+    <Compile Include="PrivateAtlas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SharedAtlas.cs" />
     <Compile Include="SimplificationSink.cs" />
     <Compile Include="TessellationSink.cs" />
     <Compile Include="WideningSink.cs" />
