--- a/Frost.DirectX/Frost.DirectX.csproj
+++ b/Frost.DirectX/Frost.DirectX.csproj
@@ -88,14 +88,32 @@
     <Compile Include="Device2D.cs" />
     <Compile Include="DynamicAtlas.cs" />
     <Compile Include="GeometrySinkBase.cs" />
+    <Compile Include="ISurfaceAtlas.cs" />
     <Compile Include="PrivateAtlas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafeList.cs" />
     <Compile Include="SharedAtlas.cs" />
     <Compile Include="SimplificationSink.cs" />
     <Compile Include="TessellationSink.cs" />
     <Compile Include="WideningSink.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Frost.DirectX.Common\Frost.DirectX.Common.csproj">
+      <Project>{4F35A7DE-5B7B-4271-97C2-6059E685FBC6}</Project>
+      <Name>Frost.DirectX.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Frost.DirectX.Composition\Frost.DirectX.Composition.csproj">
+      <Project>{2EA01B9A-898F-425F-B65A-D6A2225CFD05}</Project>
+      <Name>Frost.DirectX.Composition</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Frost.DirectX.Formatting\Frost.DirectX.Formatting.csproj">
+      <Project>{C168162F-F8DF-4898-AAB1-03F0B2EF4ED0}</Project>
+      <Name>Frost.DirectX.Formatting</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Frost.DirectX.Painting\Frost.DirectX.Painting.csproj">
+      <Project>{5F6DDFC5-EFAF-4930-B7DC-75CF46582184}</Project>
+      <Name>Frost.DirectX.Painting</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Frost\Frost.csproj">
       <Project>{5DA3C280-5EBE-4148-BAB5-C700DA0645C2}</Project>
       <Name>Frost</Name>
