--- a/Demo.Framework/Demo.Framework.csproj
+++ b/Demo.Framework/Demo.Framework.csproj
@@ -65,25 +65,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SharpDX">
+    <Reference Include="SharpDX, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\sharpdx\SharpDX.dll</HintPath>
     </Reference>
-    <Reference Include="SharpDX.D3DCompiler, Version=2.0.3.0, Culture=neutral, processorArchitecture=MSIL" />
-    <Reference Include="SharpDX.Direct3D10">
-      <HintPath>..\Frost.DirectX.Common\bin\Debug\SharpDX.Direct3D10.dll</HintPath>
+    <Reference Include="SharpDX.D3DCompiler, Version=2.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\sharpdx\SharpDX.D3DCompiler.dll</HintPath>
     </Reference>
-    <Reference Include="SharpDX.DXGI">
+    <Reference Include="SharpDX.Direct3D10, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\sharpdx\SharpDX.Direct3D10.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpDX.DXGI, Version=2.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\sharpdx\SharpDX.DXGI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="D3D10Renderer.cs" />
@@ -101,18 +102,6 @@
     <ProjectReference Include="..\Frost.DirectX.Common\Frost.DirectX.Common.csproj">
       <Project>{4F35A7DE-5B7B-4271-97C2-6059E685FBC6}</Project>
       <Name>Frost.DirectX.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Frost.DirectX.Composition\Frost.DirectX.Composition.csproj">
-      <Project>{2EA01B9A-898F-425F-B65A-D6A2225CFD05}</Project>
-      <Name>Frost.DirectX.Composition</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Frost.DirectX.Formatting\Frost.DirectX.Formatting.csproj">
-      <Project>{C168162F-F8DF-4898-AAB1-03F0B2EF4ED0}</Project>
-      <Name>Frost.DirectX.Formatting</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Frost.DirectX.Painting\Frost.DirectX.Painting.csproj">
-      <Project>{5F6DDFC5-EFAF-4930-B7DC-75CF46582184}</Project>
-      <Name>Frost.DirectX.Painting</Name>
     </ProjectReference>
     <ProjectReference Include="..\Frost.DirectX\Frost.DirectX.csproj">
       <Project>{47E1516A-0345-408E-B762-7E4F9D0361F8}</Project>
