--- a/Frost.DirectX/Frost.DirectX.csproj
+++ b/Frost.DirectX/Frost.DirectX.csproj
@@ -83,10 +83,10 @@
   <ItemGroup>
     <Compile Include="CombinationSink.cs" />
     <Compile Include="Device2D.cs" />
-    <Compile Include="DynamicAtlas.cs" />
+    <Compile Include="DynamicSurface.cs" />
     <Compile Include="GeometrySinkBase.cs" />
     <Compile Include="ISurfaceAtlas.cs" />
-    <Compile Include="PrivateAtlas.cs" />
+    <Compile Include="PrivateSurface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SafeList.cs" />
     <Compile Include="SharedAtlas.cs" />
