--- a/Frost.DirectX/Frost.DirectX.csproj
+++ b/Frost.DirectX/Frost.DirectX.csproj
@@ -86,6 +86,7 @@
     <Compile Include="DynamicSurface.cs" />
     <Compile Include="GeometrySinkBase.cs" />
     <Compile Include="ISurfaceAtlas.cs" />
+    <Compile Include="ExternalSurface.cs" />
     <Compile Include="PrivateSurface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SafeList.cs" />
