--- a/Demo.Framework/Demo.Framework.csproj
+++ b/Demo.Framework/Demo.Framework.csproj
@@ -164,6 +164,9 @@
   <ItemGroup>
     <None Include="RenderingEffects.fx" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\frost-icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
