--- a/Frost.DirectX.Common/Frost.DirectX.Common.csproj
+++ b/Frost.DirectX.Common/Frost.DirectX.Common.csproj
@@ -99,7 +99,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Optimal|AnyCPU'">
     <OutputPath>bin\Optimal\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
