added Device2D.Geometry -- moved related methods in

--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Resources\IResourceManager.cs" />
     <Compile Include="Shaping\Enumerations.cs" />
     <Compile Include="Shaping\Geometry.cs" />
+    <Compile Include="Shaping\IGeometryManipulator.cs" />
     <Compile Include="Shaping\IGeometrySink.cs" />
     <Compile Include="Shaping\ITessellationSink.cs" />
     <Compile Include="Surfacing\Enumerations.cs" />
