migrating line breaking into Frost

--- a/Frost/Frost.csproj
+++ b/Frost/Frost.csproj
@@ -133,13 +133,20 @@
     <Compile Include="Effects\IEffectSettings.cs" />
     <Compile Include="Enumerations.cs" />
     <Compile Include="Check.cs" />
+    <Compile Include="Formatting\BreakIndex.cs" />
+    <Compile Include="Formatting\Breakpoint.cs" />
+    <Compile Include="Formatting\Demerits.cs" />
     <Compile Include="Formatting\Enumerations.cs" />
     <Compile Include="Formatting\FontFeature.cs" />
     <Compile Include="Formatting\FontFeatureCollection.cs" />
     <Compile Include="Formatting\FontMetrics.cs" />
     <Compile Include="Formatting\IFormatter.cs" />
+    <Compile Include="Formatting\ILineProvider.cs" />
     <Compile Include="Formatting\ITextMetrics.cs" />
+    <Compile Include="Formatting\LineBreaker.cs" />
     <Compile Include="Formatting\LineCollection.cs" />
+    <Compile Include="Formatting\LineFitness.cs" />
+    <Compile Include="Formatting\LineItem.cs" />
     <Compile Include="Formatting\Outline.cs" />
     <Compile Include="Formatting\OutlineCollection.cs" />
     <Compile Include="Formatting\Paragraph.cs" />
